--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,26 @@
+[package]
+name = "primordial"
+version = "0.1.0"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [workspace]
-members = [
-  "primordial"
-]
+members = [".","entity"]
+
+[dependencies]
+entity = { path = "entity" }
+axum = "0.4"
+tokio = { version = "1", features = ["full"] }
+tower = { version = "0.4", features = ["util"] }
+serde = { version="1", features = ["derive"] }
+serde_json = "1"
+serde_derive = "1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["local-time"] }
+chrono = "0.4"
+lazy_static = "1.4"
+toml = "0.5"
+rand = "0.8"
+metrics = "0.18"
+metrics-exporter-prometheus = "0.8"
