--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version="1", features = ["derive"] }
 chrono = "0.4"
 lazy_static = "1.4"
 harsh = "0.2"
+once_cell = "1.10.0"
 
 [dependencies.sea-orm]
 version = "0.6"
