--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tower = { version = "0.4", features = ["util"] }
 serde = { version="1", features = ["derive"] }
 serde_json = "1"
 serde_derive = "1"
+serde_urlencoded = "0.7"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["local-time"] }
 chrono = "0.4"
