--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,12 @@ members = [".", "entity"]
 [dependencies]
 axum = "0.4"
 chrono = "0.4"
+md5 = "0.7"
+ahash = "0.7"
 entity = {path = "entity"}
 lazy_static = "1.4"
 metrics = "0.18"
-metrics-exporter-prometheus = "0.8"
+metrics-exporter-prometheus = "0.9"
 once_cell = "1.10.0"
 rand = "0.8"
 serde = {version = "1", features = ["derive"]}
