--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,20 @@ version = "0.1.0"
 members = [".", "entity"]
 
 [dependencies]
-axum = "0.4"
+axum = { version = "0.5", features = ["headers"]}
+headers = "0.3"
+jsonwebtoken = "8"
+async-session = "3"
 chrono = "0.4"
 md5 = "0.7"
+bcrypt = "0.13"
+regex = "1.5"
 ahash = "0.7"
 entity = {path = "entity"}
 lazy_static = "1.4"
 metrics = "0.18"
 metrics-exporter-prometheus = "0.9"
-once_cell = "1.10.0"
+once_cell = "1.10"
 rand = "0.8"
 serde = {version = "1", features = ["derive"]}
 serde_derive = "1"
