--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 members = [".", "entity"]
 
 [dependencies]
+dotenv = "0.15.0"
 axum = { version = "0.5", features = ["headers"]}
 headers = "0.3"
 jsonwebtoken = "8"
