--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ chrono = "0.4"
 md5 = "0.7"
 bcrypt = "0.13"
 regex = "1.5"
-ahash = "0.7"
+ahash = "0.8"
 entity = {path = "entity"}
 lazy_static = "1.4"
-metrics = "0.18"
-metrics-exporter-prometheus = "0.9"
+metrics = "0.20"
+metrics-exporter-prometheus = "0.11"
 once_cell = "1.10"
 rand = "0.8"
 serde = {version = "1", features = ["derive"]}
@@ -32,5 +32,6 @@ serde_urlencoded = "0.7"
 tokio = {version = "1", features = ["full"]}
 toml = "0.5"
 tower = {version = "0.4", features = ["util"]}
+tower-http = { version = "0.3", features = ["trace","cors"] }
 tracing = "0.1"
 tracing-subscriber = {version = "0.3", features = ["local-time"]}
