--- a/.env
+++ b/.env
@@ -2,8 +2,13 @@ PILOT_LISTEN_ADDR=0.0.0.0:8000
 
 PILOT_LOG_LEVEL=debug
 
-PILOT_DB_MASTER_HOST=mysql://root:cuckooemm@localhost/cmm
+PILOT_DB_MASTER_HOST=mysql://root:cuckooemm@localhost/test?time_zone=+08:00
+PILOT_DB_SLAVER_HOST=mysql://root:cuckooemm@localhost/test?time_zone=+08:00
+PILOT_DB_LOG=true
 
 PILOT_HASHER_SLAT=laksjdhfgzmxnxcbvpqowiweuyry1231
 
 PILOT_JWT_SECRET=alskdjfhgmznxbcvpqiwueyrto
+
+// 灰度发布 多匹配规则，(tag匹配).
+// 配置变更订阅
